; ModuleID = '/home/carl/AnghaBench/freebsd/bin/sh/extr_exec.c_unsetfunc.c'
source_filename = "/home/carl/AnghaBench/freebsd/bin/sh/extr_exec.c_unsetfunc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.tblentry = type { i64, %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32 }

@CMDFUNCTION = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @unsetfunc(i8* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i8*, align 8
  %4 = alloca %struct.tblentry*, align 8
  store i8* %0, i8** %3, align 8
  %5 = load i8*, i8** %3, align 8
  %6 = call %struct.tblentry* @cmdlookup(i8* %5, i32 0)
  store %struct.tblentry* %6, %struct.tblentry** %4, align 8
  %7 = icmp ne %struct.tblentry* %6, null
  br i1 %7, label %8, label %21

8:                                                ; preds = %1
  %9 = load %struct.tblentry*, %struct.tblentry** %4, align 8
  %10 = getelementptr inbounds %struct.tblentry, %struct.tblentry* %9, i32 0, i32 0
  %11 = load i64, i64* %10, align 8
  %12 = load i64, i64* @CMDFUNCTION, align 8
  %13 = icmp eq i64 %11, %12
  br i1 %13, label %14, label %21

14:                                               ; preds = %8
  %15 = load %struct.tblentry*, %struct.tblentry** %4, align 8
  %16 = getelementptr inbounds %struct.tblentry, %struct.tblentry* %15, i32 0, i32 1
  %17 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %16, i32 0, i32 0
  %18 = load i32, i32* %17, align 8
  %19 = call i32 @unreffunc(i32 %18)
  %20 = call i32 (...) @delete_cmd_entry()
  store i32 0, i32* %2, align 4
  br label %22

21:                                               ; preds = %8, %1
  store i32 0, i32* %2, align 4
  br label %22

22:                                               ; preds = %21, %14
  %23 = load i32, i32* %2, align 4
  ret i32 %23
}

declare dso_local %struct.tblentry* @cmdlookup(i8*, i32) #1

declare dso_local i32 @unreffunc(i32) #1

declare dso_local i32 @delete_cmd_entry(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
